<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string
        name="app_name">BlackLogics</string>
    <string
        name="import_icon_title">Import Icon</string>
    <string
        name="select">Select</string>
    <string
        name="cancel">Cancel</string>
    <string
        name="black">Black</string>
    <string
        name="grey">Grey</string>
    <string
        name="white">White</string>
    <string
        name="icon_name_hint">Icon Name</string>
    <string
        name="icon_name_required">Icon name is required</string>
    <string
        name="select_icon">Please select an icon</string>
    <string
        name="run_button_text">RUN</string>
    <string
        name="common_word_run">Run</string>
    <string
        name="common_word_save">Save</string>
    <string
        name="version_name">v1.0.0.1 - (112)</string>
    <string
        name="resource">Resource</string>
    <string
        name="resource_manager">Resource Manager</string>
    <string
        name="debug">Debug</string>
    <string
        name="component_tree">Component Tree</string>
    <string
        name="raw_xml">Raw XML</string>
    <string
        name="about">About</string>
    <string
        name="ok">ok</string>
    <string
        name="run">Run</string>
    <string
        name="mode">Mode</string>
    <string
        name="design_surface">Design surface</string>
    <string
        name="view">View</string>
    <string
        name="design">Design</string>
    <string
        name="blueprint">Blueprint</string>
    <string
        name="sidebar_item_title">Item 1</string>
    <string
        name="block_manager_title">Block manager</string>
    <string
        name="block_manager_sub_title">Manage your own block in logic editor.</string>
    <string
        name="back_button_description">Back</string>
    <string
        name="undo_button_description">Undo</string>
    <string
        name="redo_button_description">Redo</string>
    <string
        name="save_button_description">Save</string>
    <string
        name="more_options_description">More options</string>
    <string
        name="project_detail_description">Project details</string>
    <string
        name="design_drawer_menu_resource_encrypt">Resource Encrypt Manager</string>
    <string
        name="design_drawer_menu_resource_encrypt_subtitle">Encrypt app resources for extra protection</string>
    <string
        name="design_drawer_menu_dex_encrypt">Dex Protection (AiJiaMi Enterprise)</string>
    <string
        name="design_drawer_menu_dex_encrypt_subtitle">
    Enterprise-grade DEX encryption and anti-tamper protection
    </string>
    <string
        name="title_vibrator_description">Select vibrator component</string>
    <string
        name="title_filter">Filter</string>
    <string
        name="title_regex">Regex</string>
    <string
        name="title_show_time">Show time</string>
    <string
        name="title_show_tag">Show TAG</string>
    <string
        name="title_wrap_log">Wrap log</string>
    <string
        name="title_log_copied">Log copied</string>
    <string
        name="design_drawer_menu_logcat">Logcat Viewer</string>
    <string
        name="design_drawer_menu_logcat_subtitle">View app logs in real-time</string>
    <string
        name="ver_control_title">Version control</string>
    <string
        name="restore_project_title">Restore projects</string>
    <string
        name="splash_tag">Imagine, Create, Share</string>
    <string
        name="pray_god">Shree Ganeshay Namaha</string>
    <string
        name="default_event_name">onCreate</string>
    <string
        name="default_event_desc">On activity create</string>
    <string
        name="about_app_title">Environment Evaluation</string>
    <string
        name="application_environment_desc">Check your current environment evaluation</string>
    <string
        name="app_dark_mode_title">Dark Light </string>
    <string
        name="app_property_title">Properties</string>
    <string
        name="block_spec_title">block spec</string>
    <string
        name="app_code_title">Code</string>
    <string
        name="block_preview_title">Block preview</string>
    <string
        name="common_word_type">Type</string>
    <string
        name="common_word_type_name">Type name</string>
    <string
        name="app_color_title">color</string>
    <string
        name="block_spec2_title">Spec2</string>
    <string
        name="select_text_size">Select font size</string>
    <string
        name="app_check_update_title">Check for updates</string>
    <string
        name="app_reset_settings">Reset settings</string>
    <string
        name="developer_name">NexusTeam</string>
    <string
        name="app_docs_title">Docs</string>
    <string
        name="common_word_unavailable">Not available...</string>
    <string
        name="app_suggest_idea_title">Suggest ideas</string>
    <string
        name="developer_telegram_url">https://t.me/blacklogics_official</string>
    <string
        name="open_source_licenses_title">Open source licenses</string>
    <string
        name="app_system_information_title">System Information</string>
    <string
        name="common_word_create">Create</string>
    <string
        name="app_export_path_desc">Export path: blacklogics/keystore/release.jks</string>
    <string
        name="export_project_source_code_title">Export Source Code</string>
    <string
        name="share_exported_source_code_title">Send Source Code Zip File</string>
    <string
        name="app_local_path_title">Local Path</string>
    <string
        name="app_editor_toolbar_title">Toolbar</string>
    <string
        name="app_reset_all_settings">Reset all settings</string>
    <string
        name="app_reset_all_settings_and_data">Reset all settings and Data</string>
    <string
        name="common_reset_word">Reset</string>
    <string
        name="common_word_yes">Yes</string>
    <string
        name="app_create_new_project_title">New Project</string>
    <string
        name="word_type_to_change_icon">Tap to change icon</string>
    <string
        name="project_default_name_hint_text">Enter application name</string>
    <string
        name="word_color_accent">colorAccent</string>
    <string
        name="word_color_primary">colorPrimary</string>
    <string
        name="word_color_primary_dark">colorPrimaryDark</string>
    <string
        name="word_color_primary_normal">colorPrimaryNormal</string>
    <string
        name="word_color_primary_highlight">colorPrimaryHighlight</string>
    <string
        name="project_template_package_name_title">Package name</string>
    <string
        name="project_template_package_name_hint">com.my.newproject</string>
    <string
        name="project_name_title">NewProject</string>
    <string
        name="create_app_word">CREATE APP</string>
    <string
        name="app_advance_settings_word">Advanced Settings</string>
    <string
        name="common_word_convert">Convert</string>
    <string
        name="add_component_word">Add Component</string>
    <string
        name="component_documentation_word">Documentation</string>
    <string
        name="example_component_hint_text">Enter field name (e.g., myIntent)</string>
    <string
        name="settings_title">Settings</string>
    <string
        name="community_title">Community</string>
    <string
        name="legal_title">Legal</string>
    <string
        name="app_version_footer">Version 0.0.5 alpha5 (1459)</string>
    <!-- Component Icon Content Descriptions -->
    <string
        name="component_icon">Component icon</string>
    <string
        name="more_options">More options</string>
    <string
        name="delete">Delete</string>
    <!-- Delete Section Text -->
    <string
        name="delete_component">Delete component</string>
    <!-- Component Display Names -->
    <string
        name="component_name_default">Component Name</string>
    <string
        name="field_name_default">field_name</string>
    <!-- Optional: Additional useful strings for this component -->
    <string
        name="component_subtitle">Component subtitle</string>
    <string
        name="confirm">Confirm</string>
    <string
        name="edit">Edit</string>
    <string name="name_hint">Enter name</string>
<string name="error_field_required">This field is required</string>
<!-- res/values/strings.xml mein add karo -->

<string name="event_on_restart">Activity restarted</string>
<string name="event_on_save_instance_state">Save activity state</string>
<string name="event_on_restore_instance_state">Restore activity state</string>
<string name="event_on_activity_result">Activity result received</string>
<string name="event_on_request_permissions_result">Permissions result received</string>
<string name="event_on_user_leave_hint">User leaving activity</string>
<string name="event_on_trim_memory">System memory trim</string>
<string name="event_on_low_memory">Low memory warning</string>
<string name="event_on_new_intent">New intent received</string>
<string name="event_on_configuration_changed">Configuration changed</string>
<string name="event_on_post_resume">After onResume called</string>
<string name="event_imports">Activity imports</string>
<!-- Activity Lifecycle Events -->
<string name="root_spec_on_create">onCreate: Activity created</string>
<string name="root_spec_on_post_resume">onPostResume: Activity resumed completed</string>
<string name="root_spec_on_restart">onRestart: Activity restarted</string>
<string name="root_spec_on_save_instance_state">onSaveInstanceState: Saving state</string>
<string name="root_spec_on_restore_instance_state">onRestoreInstanceState: Restoring state</string>
<string name="root_spec_on_activity_result">onActivityResult: Result received</string>
<string name="root_spec_on_request_permissions_result">onRequestPermissionsResult: Permission result</string>
<string name="root_spec_on_user_leave_hint">onUserLeaveHint: User leaving activity</string>
<string name="root_spec_on_trim_memory">onTrimMemory: Memory trimming</string>
<string name="root_spec_on_low_memory">onLowMemory: Low memory warning</string>
<string name="root_spec_on_new_intent">onNewIntent: New intent received</string>
<string name="root_spec_on_configuration_changed">onConfigurationChanged: Configuration changed</string>

<!-- Menu Events -->
<string name="root_spec_on_options_item_selected">onOptionsItemSelected: Menu item selected</string>
<string name="root_spec_on_create_options_menu">onCreateOptionsMenu: Creating options menu</string>

<!-- Special -->
<string name="root_spec_imports">Imports: Adding imports</string>
</resources>